align action icons correctly

--- a/src/app/components/employees/employees.component.css
+++ b/src/app/components/employees/employees.component.css
@@ -22,6 +22,7 @@ table {
 
   .edit-icon{
     color: #0000ff;
+    margin-left: 10px;
   }
   
   .delete-icon {
